--- a/src/HelloCdk/HelloCdk.csproj
+++ b/src/HelloCdk/HelloCdk.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,7 +7,11 @@
 
   <ItemGroup>
     <PackageReference Include="Amazon.CDK" Version="0.30.0" />
+    <PackageReference Include="Amazon.CDK.AWS.ApplicationAutoScaling" Version="0.30.0" />
+    <PackageReference Include="Amazon.CDK.AWS.EC2" Version="0.30.0" />
+    <PackageReference Include="Amazon.CDK.AWS.ECS" Version="0.30.0" />
     <PackageReference Include="Amazon.CDK.AWS.IAM" Version="0.30.0" />
+    <PackageReference Include="Amazon.CDK.AWS.S3" Version="0.30.0" />
     <PackageReference Include="Amazon.CDK.AWS.SNS" Version="0.30.0" />
     <PackageReference Include="Amazon.CDK.AWS.SQS" Version="0.30.0" />
   </ItemGroup>
